wellesleynet/roles/k8s/files/15_authelia.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: authelia
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  serviceName: "authelia"
  template:
    metadata:
      labels:
        app: authelia
    spec:
      enableServiceLinks: false
      containers:
      - image: authelia/authelia:4.38.16
        imagePullPolicy: Always
        name: authelia
        ports:
        - containerPort: 80
        volumeMounts:
        - name: authelia-config
          mountPath: /config
        - name: authelia-data
          mountPath: /data
        - name: authelia-secrets
          mountPath: /secrets
          readOnly: true
        livenessProbe:
          exec:
            command:
            - ls
            - /data/lost+found
          initialDelaySeconds: 5
          periodSeconds: 5
      - image: redis:7.4.0-alpine
        imagePullPolicy: Always
        name: authelia-redis
        command:
          - "/usr/local/bin/redis-server"
        args:
          - "--requirepass"
          - "$(AUTHELIA_SESSION_REDIS_PASSWORD)"
          - "--dir"
          - "/data"
          - "-- save"
          - "300"
          - "1"
        volumeMounts:
        - name: authelia-data
          mountPath: /data
        livenessProbe:
          exec:
            command:
            - ls
            - /data/lost+found
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: authelia-config
        configMap:
          name: authelia
      - name: authelia-data
        persistentVolumeClaim:
          claimName: authelia
      - name: authelia-secrets
        projected:
          sources:
            - secret:
                name: authelia
            - secret:
                name: lldap

---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: authelia
spec:
  selector:
    app: authelia
  ports:
  - name: authelia
    port: 9091
    protocol: TCP
    targetPort: 9091
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: authelia.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: authelia
            port:
              number: 9091
  tls:
  - hosts:
    - authelia.kiski.co
    secretName: authelia-kiski-co-tls
